# voxtype-tui

./: .SRCINFO  .gitignore  CLAUDE.md  LICENSE  PKGBUILD  README.md  pyproject.toml  pytest.ini  requirements.txt  voxtype-tui.install
contrib/: voxtype-tui.desktop
docs/: README.md  dictionary.md  keybindings.md  models.md  ownership-model.md  restart-sensitive.md  settings.md  theming.md  vocabulary.md
scripts/: install-omarchy.sh  roundtrip_check.py  smoke_test.py  uninstall-omarchy.sh
tests/: conftest.py  test_app_shell.py  test_async_save.py  test_cli_migrate.py  test_cli_postprocess.py  test_config_roundtrip.py  test_cross_tab_engine_sync.py  test_daemon_ready_wait.py  test_dictionary_engine.py  test_dictionary_tab.py  test_exit_restart.py  test_export.py  test_gpu_dropin.py  test_gpu_heal.py  test_hydration_write_check.py  test_import.py  test_import_settings_optin.py  test_migrations.py  test_missing_model_flow.py  test_model_catalog.py  test_model_guards.py  test_models_tab.py  test_non_whisper_download.py  test_omarchy_install.py  test_pkgbuild.py  test_post_process_wiring.py  test_restart_ux.py  test_safe_save.py  test_settings_advanced.py  test_settings_audio.py  test_settings_engine.py  test_settings_gpu.py  test_settings_hotkey.py  test_settings_hydration_audit.py  test_settings_model_guard.py  test_settings_output.py  test_sidecar.py  test_single_instance.py  test_sudo.py  test_sync.py  (+5 more)
voxtype_tui/: app.py  cli_migrate.py  cli_postprocess.py  config.py  dictionary.py  dictionary_engine.py  gpu.py  migrations.py  models.py  settings.py  sidecar.py  (+8 more)
(+12 files in other folders)
