[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "voxtype-tui"
version = "0.1.5"
description = "Textual-based TUI for managing Voxtype (Linux voice-to-text daemon)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.0,<9",
    "tomlkit>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1",
    "pytest-xdist>=3",
]

[project.scripts]
voxtype-tui = "voxtype_tui.app:main"
voxtype-tui-postprocess = "voxtype_tui.cli_postprocess:main"

[tool.setuptools.packages.find]
include = ["voxtype_tui*"]
